--- a/v8/style.css
+++ b/v8/style.css
@@ -524,6 +524,13 @@ body {
   opacity: 0.85;
 }
 
+.lang-bar img {
+  width: 28px;
+  height: auto;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
 
 
 
