--- a/v8/style.css
+++ b/v8/style.css
@@ -535,6 +535,13 @@ body {
   height: auto;
   display: block;
 }
+.top-subtitle {
+  font-size: 0.9em;
+  opacity: 0.8;
+  margin-top: -4px;
+  text-align: center;
+}
+
 
 
 
