--- a/v8/style.css
+++ b/v8/style.css
@@ -538,14 +538,13 @@ body {
 .top-subtitle {
   font-size: 0.9em;
   opacity: 0.8;
-  margin-top: -4px;
-  text-align: center;
+  margin-top: 2px;
 }
-
-.top-title,
-.top-subtitle {
-  display: block;
-  width: 100%;
+.top-center {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   text-align: center;
 }
 
